# qTox

./: .clang-format  .clang-tidy  .clog.toml  .gitattributes  .gitignore  .travis.yml  .weblate  CHANGELOG.md  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  COPYING  INSTALL.fa.md  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE  MAINTAINING.md  NURUPOWILLSUEME  OSX-Migrater.sh  README.md  SECURITY.md  addfriendform.cpp  android.qrc  audiobuffer.cpp  audiobuffer.h  audioinputproxy.cpp  audioinputproxy.h  audiooutputproxy.cpp  audiooutputproxy.h  bootstrap-osx.sh  bootstrap.bat  bootstrap.sh  buildPackages.sh  callgrind.out.26334  cdata.cpp  cdata.h  chatform.cpp  chatform.h  circle.yml  copyableelidelabel.cpp  (+70 more)
.ci-scripts/: build-docs.sh  build-gitstats.sh  build-osx-deps.sh  build-osx.sh  build-qtox-linux.sh  build-qtox-macos.sh  build-windows.sh  deploy-docs.sh  deploy-gitstats.sh  lcov.sh  verify-commit-format.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: build-docs.sh  build-gitstats.sh  build-osx.sh  build-qtox-linux.sh  build-rust.sh  build-script  build-ubuntu-14-04.sh  build-ubuntu-16-04.sh  build-ubuntu_14_04.sh  build-windows-deps.sh  build-windows.sh  cppcheck.sh  deploy-docs.sh  deploy-gitstats.sh  deploy-install  deploy-jenkins-branch.sh  deploy-script  env-linux.sh  env-osx.sh  env-windows.sh  env.sh  git-deploy  lcov.sh  linux-install  osx-install  phase  test-after_script  test-install  test-script  travis.sh  upload_package.sh  verify-commit-format.sh  windows-install
android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
appimage/: build-appimage.sh  build.sh
audio/: CMakeLists.txt  ToxEndCall.pcm  ToxEndCall.s16le.pcm  ToxIncomingCall.pcm  ToxOutgoingCall.pcm  ToxOutgoingCall.s16le.pcm  notification.pcm  notification.s16le.pcm
audio/include/audio/: audio.h  iaudiocontrol.h  iaudiosettings.h  iaudiosink.h  iaudiosource.h
audio/resources/: ToxIncomingCall.s16le.pcm  format.md  res.qrc
audio/src/: audio.cpp  audio.h  iaudiocontrol.h  iaudiosettings.cpp  iaudiosettings.h  iaudiosink.cpp
audio/src/backend/: alsink.cpp  alsink.h  alsource.cpp  alsource.h  openal.cpp  openal.h
buildscripts/: build-osx.sh  build_aitool_linux.sh  build_ffmpeg.sh  build_ffmpeg_cross.sh  build_ffmpeg_windows.sh  build_gdb_windows.sh  build_gmp_windows.sh  build_ldqt_linux.sh  build_libexif.sh  build_libexif_cross.sh  build_libexif_windows.sh  build_libexpat_windows.sh  build_mingw_ldd_windows.sh  build_msgpack_c.sh  build_msgpack_c_cross.sh  build_msgpack_c_windows.sh  build_nsisshellexecasuser_windows.sh  build_openal.sh  build_openal_cross.sh  build_openal_windows.sh  build_openssl.sh  build_openssl_cross.sh  build_openssl_windows.sh  build_opus.sh  build_opus_cross.sh  build_opus_windows.sh  build_osx.sh  build_osx_deps.sh  build_qrencode.sh  build_qrencode_cross.sh  build_qrencode_windows.sh  build_qt.sh  build_qt_cross.sh  build_qt_windows.sh  build_snore_linux.sh  build_snore_windows.sh  build_sodium.sh  build_sodium_cross.sh  build_sodium_windows.sh  build_sqlcipher.sh  (+12 more)
cmake/: CheckAtomic.cmake  Dependencies.cmake  Installation.cmake  Packing.cmake  ProcessCode.cmake  Qt5CorePatches.cmake  Testing.cmake  windows-toolchain.cmake
cmake/warnings/: CMakeLists.txt
core/: CMakeLists.txt
core/include/core/: core.h  coreav.h  corefile.h  dhtserver.h  groupid.h  groupinvite.h  icorefriendmessagesender.h  icoregroupmessagesender.h  icoregroupquery.h  icoreidhandler.h  icoresettings.h  icorevideo.h  itoxstatus.h  toxcall.h  toxencrypt.h  toxfile.h  toxfilepause.h  toxlogger.h  toxoptions.h  toxpk.h
core/src/: contactid.cpp  core.cpp  coreav.cpp  corefile.cpp  dhtserver.cpp  groupid.cpp  groupinvite.cpp  toxcall.cpp  toxencrypt.cpp  toxfile.cpp  toxid.cpp  toxlogger.cpp  toxoptions.cpp  toxpk.cpp  toxstring.h
debian/: changelog  control  copyright  rules
doc/: TCS_state.md  coding_standards.md  faq.md  user_manual_en.html  user_manual_en.md
docker/: Dockerfile.debian  Dockerfile.ubuntu  build-debian.sh  build-ubuntu.sh  start-qtox.sh
flatpak/: build-flatpak.sh  build.sh  chat.tox.qTox.json  io.github.qtox.qTox.json  update_flathub_descriptor_dependencies.py
misc/: cdata.cpp  cstring.cpp  cstring.h  settings.cpp  settings.h  smileypack.cpp  smileypack.h  style.cpp  style.h
osx/: Brewfile  Brewfile-DepBuildDeps  DS_Store-DMG  createdmg  gplv3.rtf  info.plist  macfixrpath  makedist.sh  postinstall  preinstall  qTox-Mac-Deployer-ULTIMATE.sh  qtox_sudo.m  update-plist-version.sh  updater.go  updater.md  welcome.txt
res/: info.plist  io.github.qtox.qTox.appdata.xml  makedist.sh  nodes.json  qTox.appdata.xml  qTox.notifyrc  settings.ini  welcome.txt
smileys/: emojione.qrc  smileys.qrc
src/: CMakeLists.txt  android.ui  appmanager.cpp  appmanager.h  audio.cpp  audio.h  audiofilterer.cpp  audiofilterer.h  autoupdate.cpp  autoupdate.h  avatarbroadcaster.cpp  avatarbroadcaster.h  camera.cpp  (+53 more)
src/audio/: CMakeLists.txt  audio.cpp  audio.h  audiofilterer.cpp  audiofilterer.h  audiosink.cpp  audiosink.h  audiosource.cpp  audiosource.h  devices.cpp  devices.h  iaudiocontrol.h  iaudiosettings.h  iaudiosink.h  iaudiosource.h  toxaudiofilterer.cpp  toxaudiofilterer.h
src/audio/backend/: alsink.cpp  alsink.h  alsource.cpp  alsource.h  dummysource.cpp  dummysource.h  openal.cpp  openal.h  openal2.cpp  openal2.h
test/mock/: CMakeLists.txt  mockcoreidhandler.cpp  mockcoreidhandler.h  mockcoresettings.cpp  mockcoresettings.h  mockgroupquery.cpp  mockgroupquery.h
test/mock/include/mock/: mockbootstraplistgenerator.h  mockcoreidhandler.h  mockcoresettings.h  mockgroupquery.h
test/mock/src/: mockbootstraplistgenerator.cpp  mockcoreidhandler.cpp  mockcoresettings.cpp  mockgroupquery.cpp
translations/: .ts  CMakeLists.txt  README.md  ar.ts  be.ts  ber.ts  bg.qm  bg.ts  bn.ts  cs.ts  da.ts  de.qm  de.ts  el.ts  en.ts  eo.ts  es.ts  et.ts  fa.ts  fi.qm  fi.ts  fr.qm  fr.ts  gl.ts  he.ts  hr.ts  hu.ts  i18n.pri  is.ts  it.qm  it.ts  ja.ts  jbo.ts  kn.ts  ko.ts  lt.ts  lv.ts  mannol.qm  mannol.ts  mk.ts  (+34 more)
(+996 files in other folders)
